Scrollbar issue in server boosting screen

--- a/src/small-fixes.css
+++ b/src/small-fixes.css
@@ -160,3 +160,7 @@
 .theme-dark .tierBody-3ju-rc {
   background: var(--background-secondary);
 }
+
+.perksModal-CLcR1c.auto-2K3UW5.scrollerBase-_bVAAt {
+  margin-top: 1.375rem;
+}
